samples/_failures_safe/1761407338_690127_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aef1570c.c: In function ‘main’:
./samples/SAFE/__tmp_aef1570c.c:149:9: error: expected declaration or statement at end of input
  149 |         printf("Decompression data mismatch\n");
      |         ^~~~~~
./samples/SAFE/__tmp_aef1570c.c:149:9: error: expected declaration or statement at end of input
